--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   confetti: ^0.7.0
   razorpay_flutter: ^1.3.0
+  visibility_detector: ^0.4.0+2
 
 
 dev_dependencies:
