--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,8 @@ dependencies:
   confetti: ^0.7.0
   razorpay_flutter: ^1.3.0
   visibility_detector: ^0.4.0+2
-
-
+  js: ^0.7.2
+  device_info_plus: ^10.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
